--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,56 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+  <ion-navbar color="button">
+  	<button ion-button menuToggle left>
+      <i class="material-icons">menu</i>
+	  </button>
+    <ion-title text-center style="margin-left: -46px">MONDRIVE</ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content no-padding>
+  <ion-refresher (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content
+      pullingIcon="arrow-dropdown" 
+      pullingText="Pull to refresh" 
+      refreshingSpinner="circles">
+    </ion-refresher-content>
+  </ion-refresher> 
+  <ion-row class="middlerow" padding>
+    <ion-col width-100 text-center>
+      <div><img src="assets/imgs/chatterplace.png"></div>
+      <div class="nickname">{{userData.FullName}}</div>
+      <div class="car">{{userData.PlatNo}}</div>
+    </ion-col>
+  </ion-row>
+  <ion-row padding>
+    <ion-grid no-padding>
+      <ion-row no-padding>
+        <ion-col col-6 no-padding>
+          <ion-card  padding text-center (tap)="openkehadiran()">
+            <i class="material-icons" style="font-size: 80px; color: #7657fa">event</i>
+            Kehadiran
+          </ion-card>
+        </ion-col>
+        <ion-col col-6>
+          <ion-card padding text-center (tap)="openbahanbakar()">
+            <i class="material-icons" style="font-size: 80px; color: #ec5781">local_gas_station</i>
+            Bahan Bakar
+          </ion-card>
+        </ion-col>
+        <ion-col col-6>
+          <ion-badge color="redmerah" *ngIf="countnotif > 0">{{countnotif}}</ion-badge>
+          <ion-card padding text-center (tap)="openorder()">
+            <i class="material-icons" style="font-size: 80px; color: #0ea4a5">directions_car</i>
+            Order
+          </ion-card>
+        </ion-col>
+        <ion-col col-6>
+          <ion-card padding text-center (tap)="openbukutelepon()">
+            <i class="material-icons" style="font-size: 80px; color: #ffa907">contact_phone</i>
+            Buku Telepon
+          </ion-card>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-row>
 </ion-content>
